@@ -70,6 +70,9 @@ authorization from the copyright holders.
 #include <kpathsea/readable.h>
 #include <kpathsea/variable.h>
 #include <kpathsea/absolute.h>
+#if defined(WIN32)
+#include <kpathsea/concatn.h>
+#endif
 
 #include <math.h> /* for fabs() */
 
@@ -470,7 +473,7 @@ static UInt32 *utf32Buf = NULL;
 	/* Trim trailing whitespace.  */
 	while (last > first && ISBLANK(buffer[last - 1]))
 		--last;
-	
+
 	return true;
 }
 
@@ -1130,7 +1133,7 @@ loadGraphiteFont(PlatformFontRef fontRef, XeTeXFont font, Fixed scaled_size, con
 				}
 				goto next_option;
 			}
-			
+
 			if (strncmp(cp1, "rtl", 3) == 0) {
 				cp3 = cp2;
 				if (*cp3 == ';' || *cp3 == ':')
@@ -2157,7 +2160,7 @@ measure_native_node(void* pNode, int use_glyph_metrics)
 			void*	glyph_info = 0;
 			static	float*	positions = 0;
 			static	UInt32*	glyphs = 0;
-			static	int		maxGlyphs = 0;
+			static	int	maxGlyphs = 0;
 	
 			UBiDi*	pBiDi = ubidi_open();
 			
@@ -2968,6 +2971,14 @@ u_open_in(unicodefile* f, integer filefmt, const_string fopen_mode, integer mode
 	return rval;
 }
 
+#if defined(WIN32)
+static int
+Isspace(char c)
+{
+	return (c == ' ' || c == '\t');
+}
+#endif
+
 int
 open_dvi_output(FILE** fptr)
 {
@@ -3019,7 +3030,31 @@ open_dvi_output(FILE** fptr)
 			strcpy((char*)nameoffile+1, fullname);
 			free(fullname);
 		}
+#if defined(WIN32)
+		{
+			char *p, *pp, *bindir, *fullcmd, *prgnam;
+			bindir = kpse_var_value("SELFAUTOLOC");
+			for(pp = bindir; *pp; pp++) {
+				if(*pp == '/') *pp = '\\';
+			}
+			pp = cmd;
+			while(Isspace(*pp))
+				pp++;
+			prgnam = xmalloc(strlen(cmd));
+			p = prgnam;
+			while(!Isspace(*pp)) {
+				*p++ = *pp++;
+			}
+			*p = '\0';
+			fullcmd = concatn("\"", bindir, "\\", prgnam, "\"", pp, NULL); 
+			*fptr = popen(fullcmd, "w");
+			free(bindir);
+			free(prgnam);
+			free(fullcmd);
+		}
+#else
 		*fptr = popen(cmd, "w");
+#endif
 		free(cmd);
 		return (*fptr != 0);
 	}
